--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
 
     .output
     {
-        border: 2px solid black;
+        border: 2px solid crimson;
+        border-radius: 10px;
         margin:auto;
         height: 5.9rem;
         width: 20rem;
-        padding:0.5rem;
+        padding:1rem;
         font-size: 2rem;
     }
 </style>
