--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     .button
     {
       font-size: 15px;
-      border-radius: 1px;
       padding:0.5rem;
       margin: 0.5rem;
     }
@@ -47,16 +46,16 @@
 </head>
 <body>
 <center>
-    <h1 style="font-size:40px;margin:0.5rem; font-family: 'Dancing Script', cursive;">The Hangman Game</h1>
+    <h1 style="font-size:40px;margin:0.5rem; font-family: 'Dancing Script', cursive; ">The Hangman Game</h1>
     <hr>
-    <div class="middle" style="float: left; margin-left: 12rem; margin-top: 2rem;">
+    <div class="middle" style="float: left; margin-left: 12rem; margin-top: 0.5rem;">
     
     <h2 style="font-size:2rem;font-family: 'Acme', sans-serif;">Guess the <span style="color:brown;">C</span><span style="color:blue;">o</span><span style="color:green;">l</span><span style="color:red;">o</span><span style="color:purple;">r</span> Name!</h2>
     
-    <h3 style="font-size:1.5rem;">(Enter Letter by Letter, Small Letters Only)</h3>
-    <div id="answer" style="font-size: 20px; border: 1px solid black; width:6rem; padding:0.5rem"></div>
+    <h3 style="font-size:1.5rem;">(Enter Letter by Letter, Small ones Only)</h3>
+    <div id="answer" style="font-size: 30px; border: 1px solid black; width:8rem; padding:0.5rem"></div>
     <br>
-    <input id="word" type="text" maxlength="1" style="font-size: 20px; width:1rem; padding:0.5rem;"></input>
+    <input id="word" type="text" maxlength="1" required style="font-size: 20px; width:1rem; padding:0.5rem;"></input>
     <br>
     <button id="check" style="font-size: 20px; margin:0.5rem;">Check!</button> <button onClick="location.href=location.href" style="font-size: 20px; margin:0.5rem;">Replay!</button>
     <br>
